--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@ html {
 
 a {
   color: #568c36;
-  text-decoration: none;
 }
 
 a:hover {
@@ -30,12 +29,6 @@ a:hover {
   color: #fff;
 }
 
-.nav {
-  position: relative;
-  background-color: #113c00;
-  z-index: 2;
-}
-
 .nav a {
   display: inline-block;
   padding: .5rem .75rem;
@@ -44,9 +37,19 @@ a:hover {
   text-decoration: none;
 }
 
+.nav {
+  position: relative;
+  background-color: #113c00;
+  z-index: 2;
+}
+
 .nav a:hover {
   background-color: #fff;
   color: #113c00;
+}
+
+.nav a:focus {
+  outline: 3px solid #000;
 }
 
 .about {
